--- a/menu.html
+++ b/menu.html
@@ -116,7 +116,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="cafe.html">Home</a></li>
+                    <li><a href="inedx.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
