Separate CSS into styles folder

--- a/craft.html
+++ b/craft.html
@@ -5,126 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Prince</title>
     <link rel="icon" href="images/prince.png" type="image/jpeg">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #808080;
-			
-            color: white;
-		
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 30px 20px;
-            background-color: black;
-            color: white;
-        }
-
-        .logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-        }
-
-        nav ul li {
-            display: inline;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 5px 10px;
-            transition: background-color 0.3s;
-        }
-
-        nav ul li a:hover {
-            background-color: rgba(128, 128, 128, 0.5); /* Transparent gray */
-            border-radius: 5px;
-        }
-
-        .gallery-header {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px 0;
-            background-color: white;
-        }
-
-        .gallery-header .btn {
-            padding: 10px 20px;
-            background-color: white;
-            color: black;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1.2em;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .gallery-header .btn:hover {
-            background-color: black;
-            color: white;
-        }
-
-        .gallery {
-            padding: 20px;
-        }
-
-        .photo-grid {
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            gap: 20px;
-        }
-
-        .photo {
-            background-color: #333;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .photo img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-
-        footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 50px 20px;
-            background-color: black;
-            color: #fff;
-        }
-
-        .footer-logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-
-        .address {
-            text-align: center;
-        }
-
-        .social-media img {
-            height: 30px;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/craft.css">
 </head>
 <body>
     <header>
