--- a/checkout.html
+++ b/checkout.html
@@ -5,171 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout - Cafe Prince</title>
     <link rel="icon" href="images/prince.png" type="image/jpeg">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-image: url('images/slide.gif');
-            background-repeat: repeat;
-            background-size: cover;
-            color: white;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 30px 20px;
-            background-color: black;
-            color: white;
-        }
-
-        .logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-        }
-
-        nav ul li {
-            display: inline;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 5px 10px;
-            transition: background-color 0.3s;
-        }
-
-        nav ul li a:hover {
-            background-color: rgba(128, 128, 128, 0.5); /* Transparent gray */
-            border-radius: 5px;
-        }
-
-        footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 50px 20px;
-            background-color: black;
-            color: #fff;
-            position: relative;
-            z-index: 2;
-        }
-
-        .footer-logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-
-        .address {
-            text-align: center;
-        }
-
-        .social-media img {
-            height: 30px;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-
-        .checkout-container {
-            max-width: 800px; /* Increased max-width for wider form */
-            margin: 20px auto;
-            padding: 20px;
-            background-color: black;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-
-        .checkout-container h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
-            width: 100%; /* Full width inputs */
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1em;
-            box-sizing: border-box; /* Ensure padding and border are included in width */
-        }
-
-        .form-group input[type="submit"] {
-            background-color: black;
-            color: white; /* Changed text color for better visibility */
-            cursor: pointer;
-        }
-
-        .form-group input[type="submit"]:hover {
-            background-color: #333; /* Darken button on hover */
-        }
-
-        .popup {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .popup-content {
-            background-color: black;
-            padding: 20px;
-            border-radius: 5px;
-            text-align: center;
-        }
-
-        .popup-content h2 {
-            margin-bottom: 20px;
-        }
-
-        .popup-content button {
-            background-color: black;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-
-        .popup-content button:hover {
-            background-color: #333;
-        }
-
-        .receipt {
-            text-align: left;
-            margin-top: 20px;
-        }
-
-        .receipt p {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/checkout.css">
 </head>
 <body>
     <header>
