--- a/menu.html
+++ b/menu.html
@@ -6,105 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Prince</title>
     <link rel="icon" href="images/prince.png" type="image/jpeg">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-        }
-        body, html {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-            background-color: white;
-            color: white;
-        }
-        .container {
-            width: 1000px;
-            margin: auto;
-            transition: 0.5s;
-        }
-        header {
-            background-color: black;
-            color: white;
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            z-index: 999;
-        }
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 5px 10px;
-        }
-        nav ul li a:hover {
-            background-color: #5d4037;
-            border-radius: 5px;
-        }
-        .logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-        .list {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            column-gap: 20px;
-            row-gap: 20px;
-            margin-top: 50px;
-        }
-        .list .item {
-            text-align: center;
-            background-color: #DCE0E1;
-            padding: 20px;
-            box-shadow: 0 50px 50px #757676;
-            letter-spacing: 1px;
-        }
-        .list .item img {
-            width: 90%;
-            height: 430px;
-            object-fit: cover;
-        }
-        .list .item button {
-            background-color: #1C1F25;
-            color: #fff;
-            width: 100%;
-            padding: 10px;
-        }
-        footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 50px 20px;
-            background-color: black;
-            color: #fff;
-            position: relative;
-            z-index: 2;
-        }
-        .footer-logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-        .address {
-            text-align: center;
-        }
-        .social-media img {
-            height: 30px;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
     <div class="container">
