--- a/shop.html
+++ b/shop.html
@@ -5,254 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Prince</title>
     <link rel="icon" href="images/prince.png" type="image/jpeg">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: white;
-            color: white;
-            background-image: url('images/slide.gif');
-            background-repeat: repeat;
-            background-size: cover;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 20px;
-            background-color: black;
-            color: white;
-            position: relative;
-            z-index: 2;
-        }
-
-        .logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-            align-items: center;
-        }
-
-        nav ul li {
-            display: inline;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 5px 10px;
-        }
-
-        nav ul li a:hover {
-            background-color: #5d4037;
-            border-radius: 5px;
-            color: white;
-        }
-
-        .shopping {
-            position: relative;
-            text-align: right;
-            cursor: pointer;
-        }
-
-        .shopping img {
-            width: 40px;
-        }
-
-        .shopping span {
-            background: red;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            position: absolute;
-            top: -5px;
-            left: 80%;
-            padding: 3px 10px;
-        }
-
-        footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 50px 20px;
-            background-color: black;
-            color: #fff;
-            position: relative;
-            z-index: 2;
-        }
-
-        .footer-logo img {
-            height: 100px;
-            margin-left: 20px;
-        }
-
-        .address {
-            text-align: center;
-        }
-
-        .social-media img {
-            height: 30px;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-
-        .container {
-            width: 1000px;
-            margin: auto;
-            transition: 0.5s;
-        }
-
-        .list {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            column-gap: 20px;
-            row-gap: 20px;
-            margin-top: 50px;
-        }
-
-        .list .item {
-            text-align: center;
-            background-color: #DCE0E1;
-            padding: 20px;
-            box-shadow: 0 50px 50px #757676;
-            letter-spacing: 1px;
-            color: black;
-        }
-
-        .list .item img {
-            width: 90%;
-            height: 430px;
-            object-fit: cover;
-        }
-
-        .list .item .title {
-            font-weight: 600;
-        }
-
-        .list .item .price {
-            margin: 10px;
-        }
-
-        .list .item button {
-            background-color: #1C1F25;
-            color: #fff;
-            width: 100%;
-            padding: 10px;
-            transition: background-color 0.3s;
-        }
-
-        .list .item .added {
-            background-color: #5d4037;
-            color: #fff;
-        }
-
-        .confirmation {
-            display: none;
-            background-color: #5d4037;
-            color: white;
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 5px;
-        }
-
-        .card {
-            position: fixed;
-            top: 0;
-            left: 100%;
-            width: 500px;
-            background-color: black;
-            height: 100vh;
-            transition: 0.5s;
-        }
-
-        .active .card {
-            left: calc(100% - 500px);
-        }
-
-        .active .container {
-            transform: translateX(-200px);
-        }
-
-        .card h1 {
-            color: #E8BC0E;
-            font-weight: 100;
-            margin: 0;
-            padding: 0 20px;
-            height: 80px;
-            display: flex;
-            align-items: center;
-        }
-
-        .card .checkOut {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-
-        .card .checkOut div {
-            background-color: #E8BC0E;
-            width: 100%;
-            height: 70px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .card .checkOut div:nth-child(2) {
-            background-color: #1C1F25;
-            color: #fff;
-        }
-
-        .listCard li {
-            display: grid;
-            grid-template-columns: 100px repeat(3, 1fr);
-            color: #fff;
-            row-gap: 10px;
-        }
-
-        .listCard li div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .listCard li img {
-            width: 90%;
-        }
-
-        .listCard li button {
-            background-color: #fff5;
-            border: none;
-        }
-
-        .listCard .count {
-            margin: 0 10px;
-        }
-        .warning {
-    display: none;
-    background-color: red;
-    color: white;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-    text-align: center;
-}
-    </style>
+    <link rel="stylesheet" href="styles/shop.css">
 </head>
 <body>
     <header>
