--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cafe Prince</title>
    
     <link rel="icon" href="images/prince.png" type="image/jpeg">
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
