--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Prince</title>
     <link rel="icon" href="images/prince.png" type="image/jpeg">
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
