--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Prince</title>
     <link rel="icon" href="images/prince.png" type="image/jpeg">
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/shop.css">
 </head>
 <body>
