--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Prince</title>
     <link rel="icon" href="prince.jpg" type="image/jpeg">
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/signup.css">
 </head>
 <body>
