--- a/checkout.html
+++ b/checkout.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/prince.png" type="image/jpeg">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/checkout.css">
+    <script src="scripts/checkout.js" defer></script>
 </head>
 <body>
     <header>
@@ -27,7 +28,7 @@
     </header>
     <div class="checkout-container">
         <h2>Checkout</h2>
-        <form id="checkout-form" onsubmit="event.preventDefault(); showPopup();">
+        <form id="checkout-form" onsubmit="showPopup(event);">
             <div class="form-group">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="fname" required>
