--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/prince.png" type="image/jpeg">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/contact.css">
+    <script src="scripts/contact.js" defer></script>
 </head>
 <body>
     <header>
