--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/prince.png" type="image/jpeg">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/shop.css">
+    <script src="scripts/shop.js" defer></script>
 </head>
 <body>
     <header>
