--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/checkout.css">
     <script src="scripts/checkout.js" defer></script>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Bootstrap JS and Popper.js (required for Bootstrap components) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header>
