--- a/shop.html
+++ b/shop.html
@@ -12,34 +12,47 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <!-- Bootstrap JS and Popper.js (required for Bootstrap components) -->
+    <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <a href="cafe.html">
-                <img src="images/logo.jpg" alt="Cafe Logo">
-            </a>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
-                <li class="shopping">
-                    <img src="images/cart.jpg" alt="Cart">
-                    <span class="quantity">0</span>
-                </li>
-            </ul>
-        </nav>
-    </header>
 
-    <div class="container">
+    <!-- ✅ Bootstrap Navbar (True Black Background) -->
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="cafe.html">
+          <img src="images/logo.jpg" alt="Cafe Logo" width="80" height="80" class="d-inline-block align-text-center me-2">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav align-items-center">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="shop.html">Shop</a></li>
+            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
+
+            <!-- 🛒 Cart icon -->
+            <li class="nav-item position-relative ms-3">
+              <a class="nav-link" href="checkout.html">
+                <img src="images/cart.jpg" alt="Cart" width="35" height="35">
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger quantity">0</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- ===== MAIN CONTENT ===== -->
+    <div class="container mt-5">
         <div class="list"></div>
     </div>
+
     <div class="card">
         <h1>Cart</h1>
         <ul class="listCard"></ul>
@@ -50,6 +63,7 @@
         <div class="warning">Add an item to the cart</div>
     </div>
 
+    <!-- ===== FOOTER ===== -->
     <footer>
         <div class="footer-logo">
             <img src="images/logo.jpg" alt="Cafe Logo">
