--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="cafe.html">
-          <img src="images/logo.jpg" alt="Cafe Logo" width="80" height="80" class="d-inline-block align-text-center me-2">
+          <img src="images/logo.jpg" alt="Cafe Logo" margin-left="20" height="100" class="d-inline-block align-text-center me-2">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
