--- a/shop.html
+++ b/shop.html
@@ -20,7 +20,7 @@
     <!-- ✅ Bootstrap Navbar (True Black Background) -->
     <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="cafe.html">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
           <img src="images/logo.jpg" alt="Cafe Logo" margin-left="20" height="100" class="d-inline-block align-text-center me-2">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
